# aiera-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  aiera_api_endpoints.md  aiera_api_responses.md  aiera_mcp_tools.md  docker-compose.yml  entrypoint.py  pyproject.toml  pytest.ini  requirements.txt  semgrep.yml
aiera_mcp/: __init__.py  _version.py  circuit_breaker.py  config.py  context.py  server.py  server_backup.py
aiera_mcp/tools/: __init__.py  base.py  company_docs.py  equities.py  events.py  filings.py  params.py  registry.py  third_bridge.py  transcrippets.py  utils.py
aiera_mcp/tools/common/: __init__.py  models.py  tools.py
aiera_mcp/tools/company_docs/: __init__.py  models.py  tools.py
aiera_mcp/tools/equities/: __init__.py  models.py  tools.py
aiera_mcp/tools/events/: __init__.py  models.py  tools.py
aiera_mcp/tools/filings/: __init__.py  models.py  tools.py
aiera_mcp/tools/instructions/: __init__.py  models.py  tools.py
aiera_mcp/tools/research/: __init__.py  models.py  tools.py
aiera_mcp/tools/search/: __init__.py  models.py  tools.py  utils.py
aiera_mcp/tools/third_bridge/: __init__.py  models.py  tools.py
aiera_mcp/tools/transcrippets/: __init__.py  models.py  tools.py
aiera_mcp/tools/utilities/: __init__.py  models.py  tools.py
aiera_mcp/tools/web/: __init__.py  models.py  tools.py
scripts/: manual_test.py  run_integration_tests.sh
tests/: INTEGRATION_TESTING.md  README.md  conftest.py  test_tools.py
tests/fixtures/: api_responses.json
tests/integration/: conftest.py  test_company_docs_integration.py  test_equities_integration.py  test_events_integration.py  test_filings_integration.py  test_third_bridge_integration.py  test_transcrippets_integration.py
tests/unit/: conftest.py  test_base.py  test_serialization_comprehensive.py  test_server.py  test_server_resources.py
tests/unit/test_common/: __init__.py  test_common_models.py
tests/unit/test_company_docs/: test_company_docs_models.py  test_company_docs_tools.py  test_company_docs_tools.py.bak
tests/unit/test_equities/: test_equities_models.py  test_equities_tools.py
tests/unit/test_events/: test_events_models.py  test_events_tools.py
tests/unit/test_filings/: test_filings_models.py  test_filings_tools.py
tests/unit/test_research/: test_research_models.py  test_research_tools.py
tests/unit/test_search/: test_search_models.py  test_search_tools.py
tests/unit/test_third_bridge/: test_third_bridge_models.py  test_third_bridge_tools.py
tests/unit/test_transcrippets/: test_transcrippets_models.py  test_transcrippets_tools.py
