[project]
name = "aiera-mcp-tools"
dynamic = ["version"]
description = "Core MCP tools for Aiera financial data API"
authors = [{name = "Aiera", email = "hello@aiera.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.scripts]
aiera-mcp = "aiera_mcp.server:run"

dependencies = [
    "mcp[cli]>=1.14.0",
    "httpx>=0.24.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiera_mcp"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "aiera_mcp/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pre-commit>=4.0.0",
    "hatch-vcs>=0.4.0",
]
